--- a/MyMaven/pom.xml
+++ b/MyMaven/pom.xml
@@ -139,6 +139,11 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
 		<!-- c3p0数据源 -->
 		<dependency>
 			<groupId>com.mchange</groupId>
@@ -208,6 +213,12 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
+		</dependency>
+		<!-- csv文件读写 -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>3.5</version>
 		</dependency>
 	</dependencies>
 	<build>
