--- a/MyMaven/pom.xml
+++ b/MyMaven/pom.xml
@@ -142,6 +142,12 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.8.0</version>
 		</dependency>
+		<!-- 压缩 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.4.1</version>
+		</dependency>
 		<!-- dbcp数据源 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
