--- a/MyMaven/pom.xml
+++ b/MyMaven/pom.xml
@@ -215,7 +215,7 @@
 			<groupId>org.dbunit</groupId>
 			<artifactId>dbunit</artifactId>
 			<version>2.4.8</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
 		<!-- poi -->
 		<dependency>
